-Moved default template out of the reading area (security patch much?) -cStringIO? I never knew it existed :o
git-svn-id: http://subversion.assembla.com/svn/the-archives/trunk@72 79fbe802-9451-432d-9ef8-bd2fc9be3b1e

--- a/data/DEFAULT_TEMPLATE_PLAYER.ini
+++ b/data/DEFAULT_TEMPLATE_PLAYER.ini
@@ -1,10 +1,21 @@
 [sections]
+main:
+misc:
 clans:
 worlds:
 chat:
-data:
+bank:
 ;This is used to keep everything in check.
 ;If more section headers are added, put them here too, or they won't be read!
+
+[main]
+ip = 
+homeworld = main
+lastseen = 
+quitmsg = Goodbye.
+
+[misc]
+title = 
 
 [clans]
 wordfiler: false
@@ -15,5 +26,5 @@ wordfiler: false
 wordfiler: false
 type: global
 
-[data]
+[bank]
 balance: 0
